--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "express": "~4.11.1",
     "jade": "~1.9.1",
     "morgan": "~1.5.1",
+    "react": "^0.13.0",
     "serve-favicon": "~2.2.0"
   }
 }
