--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,9 @@
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
     "express": "~4.11.1",
+    "express-react-views": "^0.7.1",
     "morgan": "~1.5.1",
+    "react": "^0.12.2",
     "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
